<resources>
    <string name="app_name">SibarEvents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">Logo</string>
    <string name="discover_events_text">DISCOVER EVENTS</string>
    <string name="sing_in_btn_text">Sing in</string>

    <string name="btn_log_in_text">Log In</string>
    <string name="btn_sign_in_text">Sign In</string>
    <string name="done_string">Done</string>
    <string name="question_categories">What interests you? Tap a few categories you like</string>
    <string name="omit_string"><![CDATA[Omit->]]></string>
    <string name="email_string">\tEmail</string>
    <string name="password_string">\t Password</string>
    <string name="login_string">Log In</string>
    <string name="image_button_go_to_back_string">image button go to back</string>
    <string name="ip_pass">input,enter your password</string>
    <string name="forgot_pass_string">Forgot password?</string>
    <string name="signup_string">SignUp</string>
    <string name="new_user_string">New User?</string>
    <string name="remember_me_string">Remember me</string>
    <string name="FullName_string">\t Full Name</string>
    <string name="UserName_string">\tUsername</string>
    <string name="confirmpass_string">\t Confirm password</string>
    <string name="button_to_back_description">button to back screem</string>
    <string name="register_string">Register</string>
    <string name="button_to_start">button to start</string>

    <string name="mora_location">Nuevo Cuscatlan</string>
    <string name="mora_day_hour">Friday apr 28 2023 at 8:00 pm</string>
    <string name="mora_title">Concert - Mora in El Salvador</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cellphone">Cellphone</string>
    <string name="edit">Edit</string>
    <string name="i_participante">I PARTICIPANTE</string>
    <string name="john_example">John</string>
    <string name="doe_example">Doe</string>
    <string name="johndoe07_exaple">JohnDoe07</string>
    <string name="johndoe077_gmail_com_example">johndoe077@gmail.com</string>
    <string name="okbtn">OK</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="location_example">beSport, Nueva Cuscatlan, El salvador</string>
    <string name="date_example">friday april 28 2023</string>
    <string name="joining">Joining</string>
    <string name="i_will_participate">I WILL PARTICIPATE</string>


</resources>