<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<data>
<variable
    name="viewmodel"
    type="com.project.sibarevents.ui.viewmodel.EventViewModel" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FirstPage"
    android:background="@drawable/backgroundfirst">


    <Button
        android:id="@+id/btnDiscover"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        android:text="@string/discover_events_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_to_start"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/larga_gap"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>