<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_session">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/btn_back"
        android:layout_height="@dimen/btn_back"
        android:layout_margin="@dimen/medium_gap"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:padding="8dp"
        android:rotation="90"
        android:scaleType="centerCrop"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_button_go_to_back_string"/>

    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_button_background"
        android:text="@string/login_string"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CvEMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_size"
        android:hint="@string/email_string"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:layout_editor_absoluteX="48dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/EtLogin_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_size"
            android:alpha="0.3"
            android:background="@drawable/rounded_button_background"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CvPASSWORD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_size"
        android:hint="@string/password_string"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/CvEMAIL"
        tools:layout_editor_absoluteX="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EtLogin_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_size"
            android:alpha="0.3"
            android:background="@drawable/rounded_button_background"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TV_ForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pass_string"
        app:layout_constraintEnd_toEndOf="@+id/CvPASSWORD"
        app:layout_constraintTop_toBottomOf="@+id/CvPASSWORD" />

    <CheckBox

        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/CvPASSWORD"
        app:layout_constraintTop_toBottomOf="@+id/CvPASSWORD"
        android:buttonTint="@color/btnColor"
        />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/remember_me_string"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_remember"
        app:layout_constraintStart_toEndOf="@+id/checkbox_remember"
        app:layout_constraintTop_toTopOf="@+id/checkbox_remember" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/btn_back"
        android:layout_height="@dimen/btn_back"
        android:layout_margin="@dimen/medium_gap"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_background"
        android:contentDescription="@string/image_button_go_to_back_string"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/arro_img"
        app:layout_constraintEnd_toEndOf="@+id/TV_ForgotPass"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/checkbox_remember"
        app:layout_constraintTop_toBottomOf="@+id/TV_ForgotPass" />

    <ImageView
        android:id="@+id/IB_facebook"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:layout_marginStart="16dp"
        android:src="@drawable/icon_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/IB_google"
        app:layout_constraintStart_toEndOf="@+id/IB_google"
        app:layout_constraintTop_toTopOf="@+id/IB_google" />

    <ImageView
        android:id="@+id/IB_google"
        android:layout_width="@dimen/small_icon"
        android:layout_height="@dimen/small_icon"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/icon_google"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/new_user_string"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/Tv_singUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/signup_string"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="OR \n Login With Social Media"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/IB_facebook"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="@+id/btnNext" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>